@@ -1,5 +1,6 @@
+* simplify WyckoffBase of Alloy, by avoiding double entries
 * CIF parser now is able to fully parse files without symmetry operations
-* CIF parser now distinguishes multiple "_data" entries 
+* CIF parser now distinguishes multiple "_data" entries
 * improvement of the scanning XRD dataset parsers for ID01 (FastScan)
 * PEP8 improvements
 * speed optimization in EDF parser
